antlr/SceneParser.py
# Generated from Scene.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SceneParser ( Parser ):

    grammarFileName = "Scene.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<scene>'", "'</scene>'" ]

    symbolicNames = [ "<INVALID>", "Y", "H", "ND", "OBJ", "NEAR_OBJ", "WS", 
                      "XML_DECL", "SCENE_OPEN", "SCENE_CLOSE" ]

    RULE_document = 0
    RULE_sent = 1
    RULE_clause = 2
    RULE_date_tail = 3
    RULE_obj_tail = 4
    RULE_date = 5
    RULE_clause_f = 6
    RULE_near_date = 7

    ruleNames =  [ "document", "sent", "clause", "date_tail", "obj_tail", 
                   "date", "clause_f", "near_date" ]

    EOF = Token.EOF
    Y=1
    H=2
    ND=3
    OBJ=4
    NEAR_OBJ=5
    WS=6
    XML_DECL=7
    SCENE_OPEN=8
    SCENE_CLOSE=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def XML_DECL(self):
            return self.getToken(SceneParser.XML_DECL, 0)

        def SCENE_OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(SceneParser.SCENE_OPEN)
            else:
                return self.getToken(SceneParser.SCENE_OPEN, i)

        def sent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SceneParser.SentContext)
            else:
                return self.getTypedRuleContext(SceneParser.SentContext,i)


        def SCENE_CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(SceneParser.SCENE_CLOSE)
            else:
                return self.getToken(SceneParser.SCENE_CLOSE, i)

        def getRuleIndex(self):
            return SceneParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = SceneParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SceneParser.XML_DECL:
                self.state = 16
                self.match(SceneParser.XML_DECL)


            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 19
                self.match(SceneParser.SCENE_OPEN)
                self.state = 20
                self.sent()
                self.state = 21
                self.match(SceneParser.SCENE_CLOSE)
                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SceneParser.SCENE_OPEN):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clause(self):
            return self.getTypedRuleContext(SceneParser.ClauseContext,0)


        def OBJ(self):
            return self.getToken(SceneParser.OBJ, 0)

        def date(self):
            return self.getTypedRuleContext(SceneParser.DateContext,0)


        def getRuleIndex(self):
            return SceneParser.RULE_sent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSent" ):
                listener.enterSent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSent" ):
                listener.exitSent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSent" ):
                return visitor.visitSent(self)
            else:
                return visitor.visitChildren(self)




    def sent(self):

        localctx = SceneParser.SentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sent)
        try:
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SceneParser.H]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.clause()
                pass
            elif token in [SceneParser.OBJ]:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.match(SceneParser.OBJ)
                self.state = 33
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SceneParser.Y]:
                    self.state = 29
                    self.date()
                    self.state = 30
                    self.clause()
                    pass
                elif token in [SceneParser.H]:
                    self.state = 32
                    self.clause()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [SceneParser.Y]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.date()
                self.state = 39
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SceneParser.OBJ]:
                    self.state = 36
                    self.match(SceneParser.OBJ)
                    self.state = 37
                    self.clause()
                    pass
                elif token in [SceneParser.H]:
                    self.state = 38
                    self.clause()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clause_f(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SceneParser.Clause_fContext)
            else:
                return self.getTypedRuleContext(SceneParser.Clause_fContext,i)


        def date_tail(self):
            return self.getTypedRuleContext(SceneParser.Date_tailContext,0)


        def obj_tail(self):
            return self.getTypedRuleContext(SceneParser.Obj_tailContext,0)


        def getRuleIndex(self):
            return SceneParser.RULE_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClause" ):
                listener.enterClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClause" ):
                listener.exitClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClause" ):
                return visitor.visitClause(self)
            else:
                return visitor.visitChildren(self)




    def clause(self):

        localctx = SceneParser.ClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 43
                self.clause_f()
                self.state = 46 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SceneParser.H):
                    break

            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SceneParser.Y]:
                self.state = 48
                self.date_tail()
                pass
            elif token in [SceneParser.OBJ]:
                self.state = 49
                self.obj_tail()
                pass
            elif token in [SceneParser.SCENE_CLOSE]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Date_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def date(self):
            return self.getTypedRuleContext(SceneParser.DateContext,0)


        def OBJ(self):
            return self.getToken(SceneParser.OBJ, 0)

        def clause_f(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SceneParser.Clause_fContext)
            else:
                return self.getTypedRuleContext(SceneParser.Clause_fContext,i)


        def getRuleIndex(self):
            return SceneParser.RULE_date_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate_tail" ):
                listener.enterDate_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate_tail" ):
                listener.exitDate_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDate_tail" ):
                return visitor.visitDate_tail(self)
            else:
                return visitor.visitChildren(self)




    def date_tail(self):

        localctx = SceneParser.Date_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_date_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.date()
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SceneParser.OBJ]:
                self.state = 53
                self.match(SceneParser.OBJ)
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 54
                    self.clause_f()
                    self.state = 57 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SceneParser.H):
                        break

                pass
            elif token in [SceneParser.H]:
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 59
                    self.clause_f()
                    self.state = 62 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SceneParser.H):
                        break

                pass
            elif token in [SceneParser.SCENE_CLOSE]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Obj_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJ(self):
            return self.getToken(SceneParser.OBJ, 0)

        def date(self):
            return self.getTypedRuleContext(SceneParser.DateContext,0)


        def clause_f(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SceneParser.Clause_fContext)
            else:
                return self.getTypedRuleContext(SceneParser.Clause_fContext,i)


        def getRuleIndex(self):
            return SceneParser.RULE_obj_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj_tail" ):
                listener.enterObj_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj_tail" ):
                listener.exitObj_tail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObj_tail" ):
                return visitor.visitObj_tail(self)
            else:
                return visitor.visitChildren(self)




    def obj_tail(self):

        localctx = SceneParser.Obj_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_obj_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(SceneParser.OBJ)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SceneParser.Y]:
                self.state = 67
                self.date()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 68
                    self.clause_f()
                    self.state = 71 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SceneParser.H):
                        break

                pass
            elif token in [SceneParser.H]:
                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 73
                    self.clause_f()
                    self.state = 76 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SceneParser.H):
                        break

                pass
            elif token in [SceneParser.SCENE_CLOSE]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Y(self):
            return self.getToken(SceneParser.Y, 0)

        def ND(self):
            return self.getToken(SceneParser.ND, 0)

        def getRuleIndex(self):
            return SceneParser.RULE_date

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDate" ):
                listener.enterDate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDate" ):
                listener.exitDate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDate" ):
                return visitor.visitDate(self)
            else:
                return visitor.visitChildren(self)




    def date(self):

        localctx = SceneParser.DateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_date)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(SceneParser.Y)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SceneParser.ND:
                self.state = 81
                self.match(SceneParser.ND)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Clause_fContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def H(self):
            return self.getToken(SceneParser.H, 0)

        def ND(self):
            return self.getToken(SceneParser.ND, 0)

        def near_date(self):
            return self.getTypedRuleContext(SceneParser.Near_dateContext,0)


        def getRuleIndex(self):
            return SceneParser.RULE_clause_f

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClause_f" ):
                listener.enterClause_f(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClause_f" ):
                listener.exitClause_f(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClause_f" ):
                return visitor.visitClause_f(self)
            else:
                return visitor.visitChildren(self)




    def clause_f(self):

        localctx = SceneParser.Clause_fContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_clause_f)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(SceneParser.H)
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SceneParser.ND]:
                self.state = 85
                self.match(SceneParser.ND)
                pass
            elif token in [SceneParser.NEAR_OBJ]:
                self.state = 86
                self.near_date()
                pass
            elif token in [SceneParser.Y, SceneParser.H, SceneParser.OBJ, SceneParser.SCENE_CLOSE]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Near_dateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEAR_OBJ(self):
            return self.getToken(SceneParser.NEAR_OBJ, 0)

        def ND(self):
            return self.getToken(SceneParser.ND, 0)

        def getRuleIndex(self):
            return SceneParser.RULE_near_date

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNear_date" ):
                listener.enterNear_date(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNear_date" ):
                listener.exitNear_date(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNear_date" ):
                return visitor.visitNear_date(self)
            else:
                return visitor.visitChildren(self)




    def near_date(self):

        localctx = SceneParser.Near_dateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_near_date)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SceneParser.NEAR_OBJ)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SceneParser.ND:
                self.state = 90
                self.match(SceneParser.ND)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





